<resources>
    <string name="app_name">Buyer</string>

    <string name="title_section1">首页</string>
    <string name="title_section2">登录</string>
    <string name="title_section2_2">个人信息</string>
    <string name="title_section3">购物车</string>
    <string name="title_section4">购买记录</string>
    <string name="title_section5">个人收藏</string>
    <string name="title_section6">设置</string>

    <string name="home_random_title">随便看看</string>
    <string name="home_cate_title">你可能喜欢</string>
    <string name="home_others_title">别人喜欢的</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="search">搜索</string>
    <string name="category">类目</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_pwd_again">请再输入密码</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_email">请输入电子邮箱</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_act_register">注册</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_act_login">登录</string>
    <string name="cannot_empty_name">姓名不能为空</string>
    <string name="cannot_empty_address_name">姓名不能为空</string>
    <string name="cannot_empty_phone">手机号不能为空</string>
    <string name="cannot_empty_address_zip">邮政编码不能为空</string>
    <string name="cannot_empty_address_detail">详细地址不能为空</string>
    <string name="cannot_empty_address_simple">请选择省市区</string>
    <string name="cannot_empty_pwd">密码不能为空</string>
    <string name="cannot_empty_email">电子邮箱不能为空</string>
    <string name="pwd_not_same">密码不一致</string>
    <string name="pwd_more_6">密码必须多于6位</string>
    <string name="email_format_wrong">电子邮箱格式错误</string>
    <string name="register_success">注册成功！</string>
    <string name="login_success">登录成功！</string>
    <string name="net_wrong">网络错误</string>

    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="email">电子邮箱</string>
    <string name="rest_money">账户余额</string>
    <string name="recharge">充值</string>
    <string name="recharge_hint">请输入要充值的金额</string>
    <string name="recharge_success">充值成功！</string>
    <string name="title_activity_act_category">类目</string>
    <string name="title_activity_act_goods_list">商品列表</string>
    <string name="logout">登出</string>
    <string name="title_activity_act_good_detail">详细信息</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="wish_add">加入购物车</string>
    <string name="wish_added">已加入到购物车</string>
    <string name="buy_now">现在购买</string>
    <string name="good_name">商品名称</string>
    <string name="good_des">商品详情</string>
    <string name="solder_des">卖家详情</string>
    <string name="good_appraise">商品评价</string>
    <string name="good_no_des">这件商品没有详细信息</string>
    <string name="select_all">全选</string>
    <string name="price_total">总价</string>
    <string name="pay_now">现在付款</string>
    <string name="affirm_take_good">确认收货</string>
    <string name="apply_refund">申请退款</string>
    <string name="appraise_order">评价订单</string>
    <string name="money_suffix">&#160;元</string>
    <string name="total_price_prefix">实付：</string>
    <string name="order_date_prefix">下单日期：</string>
    <string name="order_buyer_prefix">购买者：</string>
    <string name="order_id_prefix">订单号：</string>
    <string name="is_pay">确认付款吗？</string>
    <string name="pay_success">付款成功！</string>
    <string name="is_buy">确认购买吗？</string>
    <string name="buy_success">购买成功！</string>
    <string name="add_address_success">添加收货地址成功！</string>
    <string name="appraise_success">评价成功！</string>
    <string name="is_continue">确认继续吗？</string>
    <string-array name="state_order">
        <item>未付款</item>
        <item>已付款</item>
        <item>已发货</item>
        <item>待评价</item>
        <item>已评价</item>
        <item>退款中</item>
        <item>已退款</item>
        <item>已关闭</item>
    </string-array>
    <string-array name="state_will">
        <item>现在付款</item>
        <item>已付款</item>
        <item>确认收货</item>
        <item>现在评价</item>
        <item>交易完成</item>
        <item>现在退款</item>
        <item>已退款</item>
        <item>已关闭</item>
    </string-array>
    <string-array name="appraise_type">
        <item>好评</item>
        <item>中评</item>
        <item>差评</item>
    </string-array>

    <string name="appraise_good">好评</string>
    <string name="appraise_middle">中评</string>
    <string name="appraise_bad">差评</string>
    <string name="appraise_now">现在评价</string>
    <string name="appraise_type_empty">请选择评价类型</string>
    <string name="appraise_content_empty">请写点评价吧</string>
    <string name="no_appraise_content">这个人没写评价</string>
    <string name="appraise_date_prefix">评价日期：</string>

    <string name="appraise_content_hint">亲，写点什么吧，您的意见对其他朋友帮助很大哦！</string>
    <string name="title_activity_act_order_detail">订单详情</string>
    <string name="title_activity_act_appraise">评价</string>
    <string name="title_activity_act_appraise_list">商品评价</string>

    <string name="title_activity_act_search">搜索</string>

    <string name="no_goods">没有结果</string>
    <string name="title_activity_act_address_manage">收货地址管理</string>
    <string name="title_activity_act_address_new">添加收货地址</string>

    <string name="address_name">收货人姓名</string>
    <string name="address_simple">省、市、区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_zip">邮政编码</string>
    <string name="address_area">所在地区</string>
    <string name="address_new">添加收货地址</string>
    <string name="address_default_set">设为默认地址</string>
    <string name="address_delete">删除收货地址</string>
    <string name="manage">管理</string>
    <string name="save">保存</string>

    <string name="address_name_prefix">收货人：</string>
    <string name="address_address_prefix">收货地址：</string>
    <string name="settings_address_manage">管理收货地址</string>
    <string name="title_activity_act_address_choose">ActAddressChoose</string>
    <string name="title_activity_act_order_verify">确认订单</string>
    <string name="dialog_choose_title">请选择地址</string>
    <string name="title_activity_act_address_detail">收货地址</string>
    <string name="please_add_address">请添加收货地址</string>
</resources>
