<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="lu.shaode.buyerrescue.ui.ActAddressNew">

    <EditText
        android:id="@+id/act_address_new_name"
        android:hint="@string/address_name"
        android:singleLine="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_address_new_phone"
        android:hint="@string/phone"
        android:singleLine="true"
        android:inputType="phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_address_new_zip"
        android:hint="@string/address_zip"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_address_new_province"
        android:editable="false"
        android:hint="@string/address_simple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_address_new_detail"
        android:hint="@string/address_detail"
        android:maxLines="3"
        android:lines="3"
        android:gravity="left|top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/act_address_new_save"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sel_b_button_red"
            android:text="@string/save"
            android:paddingRight="10dip"
            android:paddingLeft="10dip"
            android:textColor="@color/white" />

    </RelativeLayout>
</LinearLayout>
