<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lu.shaode.buyer.ui.ActRegister">

    <TextView
        android:id="@+id/act_register_tv"
        style="@style/MyTextViewStyle"
        android:text="@string/register" />

    <EditText
        android:id="@+id/act_register_et_phone"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_phone"
        android:inputType="number"
        android:layout_below="@id/act_register_tv"
        android:layout_marginTop="20dip"
        />

    <EditText
        android:id="@+id/act_register_et_pwd"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_pwd"
        android:inputType="textPassword"
        android:layout_below="@id/act_register_et_phone"
        android:maxLength="18"
        android:layout_marginTop="20dip"
        />

    <EditText
        android:id="@+id/act_register_et_pwd_again"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_pwd_again"
        android:inputType="textPassword"
        android:maxLength="18"
        android:layout_below="@id/act_register_et_pwd"
        android:layout_marginTop="20dip"
        />

    <EditText
        android:id="@+id/act_register_et_name"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_name"
        android:inputType="text"
        android:layout_below="@id/act_register_et_pwd_again"
        android:layout_marginTop="20dip"
        />

    <EditText
        android:id="@+id/act_register_et_email"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/act_register_et_name"
        android:layout_marginTop="20dip"
        />

    <Button
        android:id="@+id/act_register_bt_register"
        style="@style/MyButtonStyle"
        android:text="@string/register"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_marginRight="10dip"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
