<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lu.shaode.buyerrescue.ui.ActAppraise">

    <RelativeLayout
        android:id="@+id/act_appraise_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/act_appraise_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:background="@drawable/sel_b_button_red"
            android:text="@string/appraise_now"
            android:textColor="@color/white" />

    </RelativeLayout>
    <RadioGroup
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:id="@+id/act_appraise_type"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/act_appraise_good"
            android:layout_weight="1"
            android:text="@string/appraise_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/act_appraise_middle"
            android:layout_weight="1"
            android:text="@string/appraise_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/act_appraise_bad"
            android:layout_weight="1"
            android:text="@string/appraise_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <View
        android:id="@+id/act_appraise_line1"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:background="@color/grey"
        android:layout_below="@id/act_appraise_type"
        android:layout_margin="5dip"
        />
    <EditText
        android:id="@+id/act_appraise_content"
        android:layout_below="@+id/act_appraise_line1"
        android:layout_above="@+id/act_appraise_bottom"
        android:hint="@string/appraise_content_hint"
        android:gravity="left|top"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:maxLength="200"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</RelativeLayout>
