<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lu.shaode.buyer.ui.ActLogin">

    <TextView
        android:id="@+id/act_login_tv"
        style="@style/MyTextViewStyle"
        android:text="@string/login" />
    
    <EditText
        android:id="@+id/act_login_et_phone"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_phone"
        android:inputType="number"
        android:layout_below="@id/act_login_tv"
        android:layout_marginTop="20dip"
        />

    <EditText
        android:id="@+id/act_login_et_pwd"
        style="@style/MyEditTextStyle"
        android:hint="@string/please_input_pwd"
        android:inputType="textPassword"
        android:layout_below="@id/act_login_et_phone"
        android:layout_marginTop="20dip"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/act_login_et_phone"
        android:layout_alignRight="@id/act_login_et_phone"
        android:layout_below="@+id/act_login_et_pwd"
        android:orientation="horizontal"
        android:layout_marginTop="50dip"
        >

        <Button
            android:id="@+id/act_login_bt_register"
            style="@style/MyButtonStyle"
            android:text="@string/register"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dip"
            />

        <Button
            android:id="@+id/act_login_bt_login"
            style="@style/MyButtonStyle"
            android:text="@string/login"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            />
        </LinearLayout>
</RelativeLayout>
