<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lu.shaode.buyerrescue.ui.ActAddressDetail">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/act_address_detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:background="@drawable/sel_b_button_grey"
            android:text="@string/address_delete"
            android:paddingRight="20dip"
            android:paddingLeft="20dip"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/act_address_detail_default_set"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:background="@drawable/sel_b_button_red"
            android:layout_marginLeft="30dip"
            android:text="@string/address_default_set"
            android:paddingRight="20dip"
            android:paddingLeft="20dip"
            android:textColor="@color/white" />

        </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:padding="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_name"
                />
            <TextView
                android:id="@+id/act_address_detail_name"
                android:textColor="@color/grey_deep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="test"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />
            <TextView
                android:id="@+id/act_address_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_deep"
                android:layout_marginLeft="10dip"
                android:text="test"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_zip"
                />
            <TextView
                android:id="@+id/act_address_detail_zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_deep"
                android:layout_marginLeft="10dip"
                android:text="test"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_area"
                />
            <TextView
                android:id="@+id/act_address_detail_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_deep"
                android:layout_marginLeft="10dip"
                android:text="test"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:padding="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_detail"
                />
            <TextView
                android:id="@+id/act_address_detail_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_deep"
                android:layout_marginLeft="10dip"
                android:text="test"
                />
        </TableRow>
        </TableLayout>

</RelativeLayout>
