<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="lu.shaode.buyerrescue.ui.FragmentInfo">


    <TextView
        android:id="@+id/frag_info_name_title"
        style="@style/InfoTextViewStyle"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="60dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        style="@style/InfoTextViewStyle"
        android:id="@+id/frag_info_name"
        android:layout_toRightOf="@id/frag_info_name_title"
        android:layout_alignTop="@id/frag_info_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/frag_info_phone_title"
        style="@style/InfoTextViewStyle"
        android:layout_below="@id/frag_info_name_title"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="30dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>

    <TextView
        style="@style/InfoTextViewStyle"
        android:id="@+id/frag_info_phone"
        android:layout_toRightOf="@id/frag_info_phone_title"
        android:layout_alignTop="@id/frag_info_phone_title"
        android:layout_alignLeft="@id/frag_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/frag_info_email_title"
        style="@style/InfoTextViewStyle"
        android:layout_below="@id/frag_info_phone_title"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <TextView
        style="@style/InfoTextViewStyle"
        android:id="@+id/frag_info_email"
        android:layout_toRightOf="@id/frag_info_email_title"
        android:layout_alignTop="@id/frag_info_email_title"
        android:layout_alignLeft="@id/frag_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <Button
        android:id="@+id/frag_info_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:padding="10dip"
        android:textColor="@color/white"
        android:background="@drawable/sel_b_button_orange"
        android:text="@string/logout"
        />
</RelativeLayout>
